  --------------------------  HepMC3.2.8-pre ----------------------
2024-04-08 Mattias Ellert
         * Add support for reading with uproot
         * Drop Python2 support
2023-10-24 Mattias Ellert
         * Fix compilation with Python 3.13.0a1.
           See: https://github.com/pybind/pybind11/pull/4902
2023-09-15 Andrii Verbytskyi for HepMC
         * Major update of the build system, removed most of the custom modules.
2023-09-03 Andrii Verbytskyi for HepMC
         * Removed functions that operate on raw pointers.
  --------------------------  HepMC3.2.7 ----------------------
2023-10-02 Andrii Verbytskyi for HepMC
         * Patch release to fix the problem with vertex attributes removal.
  --------------------------  HepMC3.2.6 ----------------------
2023-03-30 Andrii Verbytskyi for HepMC
         * Deprecated the set_cross_section function with double in favour of those with vector of doubles.
2023-03-03 Andrii Verbytskyi for HepMC
         * Preparation to the release 3.2.6.
2023-03-03 Andrii Verbytskyi for HepMC
         * Better Doxygen documentation for code
2023-03-02 Andrii Verbytskyi for HepMC
         * Improvements in ReaderFactory that should help detect the file type more successfully.
2023-02-14 Andrii Verbytskyi for HepMC
         * Multiple optimizations inspired by clang-tidy
2023-02-10 Andrii Verbytskyi for HepMC
         * The Attributes are now set to be parsed after calls to from_string or set_value
2023-02-07 Andrii Verbytskyi for HepMC
         * API breaking changes in the search module: pass by const reference
2023-01-24 Andrii Verbytskyi for HepMC
         * Update python bindings
2022-11-20 Luke Pickering for HepMC
         * Modernisation of cmake
2022-09-12 Andrii Verbytskyi for HepMC
         * Fix output value of ReaderLHEF::read_event
2022-09-12 Andrii Verbytskyi for HepMC
         * Better documentation for standalone examples
2022-06-07 Luke Pickering for HepMC
         * Adds a protobuf-based HepMC3::Reader/Writer