@@ -1,4 +1,6 @@
-  --------------------------  HepMC3.2.8-pre ----------------------
+  --------------------------  HepMC3.3.0-pre ----------------------
+2024-04-20 Andy Buckley
+         * Suppress cross-section/weight count-mismatch warning if only one cross-section.
 2024-04-08 Mattias Ellert
          * Add support for reading with uproot
          * Drop Python2 support
